pink and green obs

--- a/style.css
+++ b/style.css
@@ -30,3 +30,11 @@ td {
 .obs2 {
     background-color: yellow;
 }
+
+.obs3 {
+    background-color: deeppink;
+}
+
+.obs4 {
+    background-color: greenyellow;
+}
