--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
+* {
+    font-family: 'VT323', monospace;
+}
+
+body {
+
+}
+
 #canvas {
     width: 720px;
     background-color: green;
     margin: 0 auto;
-    margin-top: 5vh;
-    position: relative;
+    margin-top: 200px;
+    position: absolute;
+    z-index: 0;
 }
 
 td {
@@ -36,13 +45,78 @@ td {
     background-color: greenyellow;
 }
 
-.end {
-    height: 100%;
-    width: 100%;
-    z-index: +1;
+#container {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    margin: 0 auto;
+    /*margin-top: 5vh;*/
+    position: relative;
+}
+
+#bathroom {
+    background-image: url(./img/bathroom_background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 1080px;
+    width: 1920px;
+    z-index: -1;
     position: absolute;
+    margin-top: 50px;
 }
 
 .hidden {
     display: none;
+}
+
+#start-button {
+    background-color: red;
+    height: 200px;
+    width: 200px;
+    position: relative;
+}
+
+#start {
+   /* background-image: url(./img/start_display.png);*/
+    height: 1080px;
+    width: 1920px;
+    z-index: 1;
+    position: absolute;
+    margin-top: 50px;
+    opacity: 100%;
+    background-repeat: no-repeat;
+}
+
+#backgroundgo {
+    background-color: black;
+    background-size: cover;
+    height: 1080px;
+    width: 1920px;
+    z-index: 1;
+    position: absolute;
+    margin-top: 50px;
+    opacity: 20%;
+}
+
+#ending {
+    background-image: url(./img/bubbles2.gif);
+    background-size: cover;
+    height: 1080px;
+    width: 1920px;
+    z-index: 1;
+    position: absolute;
+}
+
+#soapgo {
+    height: 250px;
+    width: 400px;
+    margin-left: 650px;
+}
+
+h1 {
+    color: white;
+    margin-top: 400px;
+    font-size: 200px;
+    margin-left: 600px;
 }
