--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url(https://fonts.googleapis.com/css?family=VT323);
+
 * {
     font-family: 'VT323', monospace;
 }
@@ -83,7 +86,8 @@ td {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-    width: 100vw;;
+    width: 100vw;
+    ;
     z-index: -1;
     position: absolute;
     margin-top: 50px;
@@ -140,9 +144,20 @@ h1 {
     margin: 10px;
 }
 
-#restart {
-    display: block;
+.restart {
+    background: #c507c5;
+    border-bottom: 6px inset rgba(0, 0, 0, .5);
+    border-left: 6px inset rgba(0, 0, 0, .5);
+    border-right: 6px inset rgba(255, 255, 255, .5);
+    border-top: 6px inset rgba(255, 255, 255, .5);
+    box-sizing: border-box;
+    color: white;
+    cursor: pointer;
+    font-size: 40px;
     margin: 50px;
+    padding: 5px;
+    text-transform: uppercase;
+    width: 200px;
 }
 
 .win {
