--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 
 * {
-    font-family: 'VT323', monospace;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 50px;
 }
 
 body {
@@ -46,6 +47,10 @@ td {
     background-image: url(./img/bubbles.gif);
     background-size: 50px;
 }
+.row1 {
+    background-image: url(./img/bubbles.gif);
+    background-size: 50px;
+}
 
 .obs1 {
     background-image: url(./img/red.png);
@@ -84,8 +89,8 @@ td {
     background-image: url(./img/bathroom_background.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     z-index: -1;
     position: absolute;
     margin-top: 50px;
@@ -103,44 +108,53 @@ td {
 #start {
     background-image: url(./img/start_display.png);
     background-size: 100% 100%;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     z-index: 1;
     position: absolute;
-    opacity: 100%;
     background-repeat: no-repeat;
+    opacity: 100%;
 }
 
 .ending {
     background-color: black;
     text-align: center;
-    background-size: cover;
-    height: 100vh;
+    height: 100vw;
     width: 100vw;
-    background-size: 100% 100%;
     z-index: 1;
-    top: 0px;
-    left: 0px;
     position: absolute;
-    opacity: 100%;
     background-image: url(./img/bubbles2.gif);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 50px;
+    opacity: 100%;
 }
-
-
-#soapgo {
-    height: 250px;
-    width: 400px;
+#soapgo-gameover {
+    position: absolute;
+    text-align: justify;
+    top: 450px;
 }
+#soapgo-win {
+    position: absolute;
+    text-align: justify;
+    top: 350px;
 
-h1 {
+}
+.logo {
     color: white;
-    font-size: 200px;
-    margin: 10px;
+    position: absolute;
+    text-align: center;
+    z-index: 1;
+    padding: 20px;
+    top: 350px;
 }
+
+
+
+
 
 .restart {
     background: #c507c5;
@@ -151,32 +165,42 @@ h1 {
     box-sizing: border-box;
     color: white;
     cursor: pointer;
-    font-size: 40px;
     margin: 50px;
     padding: 5px;
     text-transform: uppercase;
-    width: 200px;
+    width: 250px;
+    font-size: 20px;
+    position: absolute;
+    top: 700px;
 }
 
 .win {
-    background-color: black;
-    text-align: center;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
-    background-size: 100% 100%;
+  
     z-index: 1;
-    top: 0px;
-    left: 0px;
-    position: absolute;
-    opacity: 100%;
-    background-image: url(./img/universe_win.png);
+    width: 100%;
+    height: 100%;
+    background-image: url(/img/sparkles.gif),url(/img/universe_win.png);
+    font-family: 'Press Start 2P', cursive;
+    text-shadow: -1px -1px 1px #333, 1px -1px 1px #333, -1px 1px 1px #333, 1px 1px 1px #333;
+    margin: 0;
+    padding: 0;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+    position: absolute;
+    text-align: center;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 50px;
 
+
+
+}
+.logo-win {
+    color: white;
+    position: absolute;
+    text-align: center;
+    padding: 25px;
+}
 .hidden {
     display: none;
 }
